module(name = "cloe", version = "0.23.0")

# Build dependencies:
bazel_dep(name = "cmake_configure_file", version = "0.1.0")
bazel_dep(name = "rules_cc", version = "0.0.9")

# Test dependencies:
bazel_dep(name = "googletest", version = "1.14.0", repo_name = "gtest")

# Library dependencies:
bazel_dep(name = "boost", version = "1.83.0.bcr.1")
bazel_dep(name = "cli11", version = "2.3.2")
bazel_dep(name = "eigen", version = "3.4.0")
bazel_dep(name = "fmt", version = "10.2.1")
bazel_dep(name = "incbin", version = "20211106.0")
bazel_dep(name = "inja", version = "3.4.0")
bazel_dep(name = "lua", version = "5.4.6")
bazel_dep(name = "nlohmann_json", version = "3.11.3")
bazel_dep(name = "oatpp", version = "1.3.0")
bazel_dep(name = "sol", version = "3.3.1")
bazel_dep(name = "spdlog", version = "1.13.0")
