module(name = "cloe", version = "0.25.0")

# Build dependencies:
bazel_dep(name = "cmake_configure_file", version = "0.1.0")
bazel_dep(name = "rules_cc", version = "0.0.9")

# Test dependencies:
bazel_dep(name = "googletest", version = "1.14.0", repo_name = "gtest")

# Library dependencies:
bazel_dep(name = "boost", version = "1.83.0.bcr.1")
bazel_dep(name = "cli11", version = "2.3.2")
bazel_dep(name = "eigen", version = "3.4.0.bcr.1")
bazel_dep(name = "fmt", version = "10.2.1")
bazel_dep(name = "incbin", version = "20211106.0")
bazel_dep(name = "inja", version = "3.4.0")
bazel_dep(name = "lua", version = "5.4.6")
bazel_dep(name = "nlohmann_json", version = "3.11.3")
bazel_dep(name = "oatpp", version = "1.3.0")
bazel_dep(name = "sol", version = "3.3.1")
bazel_dep(name = "spdlog", version = "1.13.0")
bazel_dep(name = "open-simulation-interface", version = "3.5.0")
bazel_dep(name = "protobuf", version = "26.0")

# Tooling dependencies:
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "1e08f8e0507b6b6b1f4416a9a22cf5c28beaba93",  # 2024-07-04
)
