# TODO(release) // Version bump cloe-launch
#
# For now, it follows the same version as the cloe release.
# This may change in the future.
#

[tool.poetry]
name = "cloe-launch"
version = "0.22.0"
description = "Launch cloe-engine with Conan profiles."
license = "Apache-2.0"
authors = [
    "Robert Bosch GmbH <cloe-dev@eclipse.org>",
]
keywords = ["cloe"]

[tool.poetry.dependencies]
python = "^3.6"
toml = "^0.10.1"
click = "^7.1.2"

[tool.poetry.scripts]
cloe-launch = "cloe_launch.__main__:entry_point"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
force_single_line = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
src_paths = ["cloe_launch"]
known_first_party = "cloe_launch"

[tool.black]
line-length = 88

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}
