load(
    "@cmake_configure_file//:cmake_configure_file.bzl",
    "cmake_configure_file",
)

FABLE_VERSION = "0.23.0"
FABLE_VERSION_U32 = (0<<24) | (0 << 16) | (23 << 8) | 0

cmake_configure_file(
    name = "fable_version_hpp",
    src = "src/fable/version.hpp.in",
    out = "include/fable/version.hpp",
    defines = [
        "FABLE_VERSION={}".format(FABLE_VERSION),
        "FABLE_VERSION_U32={}".format(FABLE_VERSION_U32),
    ]
)

cc_library(
    name = "fable",
    srcs = glob(["src/**/*.cpp"], exclude=["src/**/*_test.cpp"]),
    hdrs = glob(["include/**/*.hpp"]) + [":fable_version_hpp"],
    includes = [ "include" ],
    deps = [
        "@fmt",
        "@nlohmann_json//:json",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "fable_test",
    srcs = glob(["src/**/*_test.cpp"]),
    deps = [
        ":fable",
        "@sol",
        "@boost//:optional",
        "@gtest//:gtest_main",
    ],
)
